# Simple-Path-Tracer

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/Simple-Path-Tracer/: PathTracer.h
include/Simple-Ray-Tracer/: RayTracer.h
include/Simple-Ray-Tracer/Settings/: config.h
output/: img.ppm
src/Simple-Path-Tracer/: Camera.cpp  Camera.h  Dielectric.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  Hitable.h  Material.h  Metal.cpp  Metal.h  PathTracer.cpp  PathTracer.h  Ray.cpp  Sphere.cpp  Sphere.h  Surface.h  config.h  main.cpp  util.cpp  util.h
src/Simple-Path-Tracer/Materials/: Dielectric.cpp  Diffuse.cpp  Diffuse.h  Metal.cpp  Metal.h
src/Simple-Path-Tracer/Surfaces/: Sphere.cpp  Sphere.h
src/Simple-Ray-Tracer/: Camera.cpp  Camera.h  HitInfo.h  Material.h  Ray.cpp  Ray.h  RayTracer.cpp  Surface.h  config.h  main.cpp  util.cpp  util.h
src/Simple-Ray-Tracer/Materials/: Dielectric.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  Material.h  Metal.cpp  Metal.h
src/Simple-Ray-Tracer/Math/: util.cpp  util.h
src/Simple-Ray-Tracer/RayTracer/: Camera.cpp  Camera.h  Ray.cpp  Ray.h  RayTracer.cpp
src/Simple-Ray-Tracer/Surfaces/: Sphere.cpp  Sphere.h  Surface.h
